Uploaded Jupyter notebook

--- a/Sentiment Analysis using Naive Bayes.ipynb
+++ b/Sentiment Analysis using Naive Bayes.ipynb
@@ -13,7 +13,7 @@
     " \n",
     " * Pang, B., Lee, L., & Vaithyanathan, S. (2002, July). [Thumbs up?: sentiment classification using machine learning techniques.](http://www.cs.cornell.edu/home/llee/papers/sentiment.pdf) In Proceedings of the ACL-02 conference on Empirical methods in natural language processing-Volume 10 (pp. 79-86). Association for Computational Linguistics.\n",
     " \n",
-    " * You can download the data from [this website](http://www.cs.cornell.edu/people/pabo/movie-review-data/) (There are different versions, let's all download the 1.1 version of the polarity dataset (`polarity dataset v1.1 (2.2Mb) (includes README.1.1):...`))"
+    " * You can download the data from [this website](http://www.cs.cornell.edu/people/pabo/movie-review-data/) (There are different versions, let's download the 1.1 version of the polarity dataset (`polarity dataset v1.1 (2.2Mb) (includes README.1.1):...`))"
    ]
   },
   {
@@ -48,6 +48,7 @@
    },
    "outputs": [],
    "source": [
+    "# download the dataset (positive and negative tokens) first\n",
     "cwd = os.getcwd()\n",
     "pos_path = cwd + '/tokens/pos/'\n",
     "neg_path = cwd + '/tokens/neg/'"
